test_data/Json/ContainedInEnvironment/Unexpected/Unserializable/InvalidModelType/ReferenceElement/invalidModelType.json.exception
submodels[0].submodelElements[0]: Unexpected model type for SubmodelElement: aCompletelyInvalidModelType